<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="txt_welcome_onboarding">Welcome!\n To Celso\'s Shoe Store</string>
    <string name="txt_desc_onboarding">Get the latest and greatest styles from your favorite brands, \nwith styles for everyone: women, men, girls and boys.\nShop top brands like Nike, Converse, Skechers and Vans. </string>
    <string name="Instructions">Help</string>
    <string name="txt_how"> How to Shop Online</string>
    <string name="txt_how_desc"> Shop for shoes online and choose from the option to pick-up in-store or deliver them straight to your door.\n Rewards members get FREE SHIPPING on all orders </string>
    <string name="go_shop">Go Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
