<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnst_login"
        style="@style/background">

        <TextView
            android:id="@+id/txt_header"
            style="@style/header"
            android:layout_marginTop="80dp"
            android:text="@string/txt_how"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_instructions"
            style="@style/description"
            android:text="@string/txt_how_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_ok"
            style="@style/button"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/light_orange"
            android:text="@string/go_shop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_instructions"
            app:layout_constraintVertical_bias="0.16000003" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>