<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnst_login"
        style="@style/background">

        <TextView
            android:id="@+id/txt_header_login"
            style="@style/header"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_email"
            style="@style/label"
            android:layout_marginTop="60dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/txt_header_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_header_login"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/etxt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lbl_email"
            app:layout_constraintTop_toBottomOf="@+id/lbl_email"
            android:autofillHints="@null"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/lbl_password"
            style="@style/label"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/etxt_email"
            app:layout_constraintTop_toBottomOf="@+id/etxt_email" />


        <EditText
            android:id="@+id/etxt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/lbl_password"
            app:layout_constraintTop_toBottomOf="@+id/lbl_password"
            tools:ignore="LabelFor"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_login"
            style="@style/button"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_register"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/etxt_password"
            app:layout_constraintTop_toBottomOf="@+id/etxt_password" />

        <Button
            android:id="@+id/btn_register"
            style="@style/button"
            android:backgroundTint="@color/orange"
            android:text="@string/action_register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_login"
            app:layout_constraintTop_toTopOf="@+id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>